auth app completed.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "AppSettings": {
+    "Secret": "",
+    "EmailFrom": "",
+    "SmtpHost": "",
+    "SmtpPort": "",
+    "SmtpUser": "",
+    "SmtpPass": ""
+  },
+  "ConnectionStrings": {
+    "signupDatabase":  ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
